# wxWidgetsAppTemplate

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  icon.xpm  myApp.cpp  myApp.h  myMain.cpp  myMain.h
